working models, pages

--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -2,13 +2,10 @@ doctype html
 html
   head
     meta(charset='utf-8')
-    title Node/Express.js Template
+    title Cook Book
     link(rel='stylesheet', href='/css/style.css')
   body
-    h1 Node/Express.js Template
-    nav
-      ul
-        li: a(href='/') Home
+    h1 Cook Book
 
     block content
 
