--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -3,10 +3,67 @@
 *{
   font-family: 'Open Sans', sans-serif;
   font-size: 13px;
+  margin: 0px;
+  padding: 0px;
 }
-
+h1,h2{
+  font-size: 30px;
+}
 body{
-  background-image: url(/img/node.png);
-  background-size: cover;
+  background-color:red;
 }
 
+header{
+  margin: 20px;
+}
+
+header h1{
+  font-size: 25px;
+}
+
+.recipe{
+  display: inline-block;
+  width: 300px;
+  border: 1px solid #111111;
+  border-radius: 5px;
+  margin: 20px;
+  background-color: #DDDDDD;
+}
+
+.recipe .photo{
+  height: 300px;
+  background-size: cover;
+  border-bottom: 1px solid #111111;
+  margin-bottom: 10px;
+}
+
+.recipe .name{
+  font-size: 20px;
+  color: #001F3F;
+  padding: 5px;
+}
+
+.recipe .directions, .recipe .ingredients{
+  padding: 5px;
+}
+
+.recipe .ingredients li{
+  position: relative;
+  left: 20px;
+}
+
+.recipe .directions li{
+  position: relative;
+  left: 15px;
+  padding: 10px;
+}
+form{
+display: inline-block;
+padding: 10px;
+border: 1px solid;
+margin: 20px;
+}
+form input, form button, form textarea{
+display: block;
+width: 350px;
+}
